tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-call-close.diagnostic
diagnostic error code=P0001 family=parser message="expected ) after call arguments" sources=1 labels=2 notes=0 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-call-close.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-call-close.ari" bytes=97
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-call-close.ari" line=6 column=21 end_line=6 end_column=22 byte_start=93 byte_end=94 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-call-close.ari:6:21\n   |\n 6 |   return callee(1, 2;\n   |                     ^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-call-close.ari" line=6 column=16 end_line=6 end_column=17 byte_start=88 byte_end=89 message="call argument list starts here"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-call-close.ari:6:16\n   |\n 6 |   return callee(1, 2;\n   |                ^"
  Help index=0 location=none message="add a matching ) before continuing"
